# VyMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  publish-pypi.yml
src/vymcp/: __init__.py  auth.py  changes.py  client.py  config.py  discovery.py  features.py  server.py  validation.py  writes.py
tests/: conftest.py  test_changes.py  test_client.py  test_config.py  test_features.py  test_generic_driver.py  test_read_tools.py  test_validation.py  test_write_tools.py
