[project]
name = "vymcp"
version = "0.1.0"
description = "MCP server for VyOS routers, powered by VyManager"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
vymcp = "vymcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vymcp"]
